# gnome-video-arcade

./: NEWS  README  configure.ac  gnome-video-arcade.doap
data/: Makefile.am  gnome-video-arcade.appdata.xml.in  gnome-video-arcade.builder  org.gnome.VideoArcade.gschema.xml.in
docs/: gnome-video-arcade.1.in
docs/reference/: gnome-video-arcade-sections.txt
help/: Makefile.am
help/da/: da.po
help/de/: de.po
help/fr/: fr.po
help/pl/: pl.po
help/sv/: sv.po
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  eu.po  fr.po  hr.po  hu.po  id.po  it.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  zh_CN.po
src/: gva-audit.c  gva-audit.h  gva-categories.c  gva-categories.h  gva-cell-renderer-pixbuf.c  gva-cell-renderer-pixbuf.h  gva-column-manager.c  gva-column-manager.h  gva-columns.c  gva-columns.h  gva-common.h  gva-db.c  gva-db.h  gva-error.c  gva-error.h  gva-favorites.c  gva-favorites.h  gva-game-store.c  gva-game-store.h  gva-history.c  gva-history.h  gva-input-file.c  gva-input-file.h  gva-main.c  gva-main.h  gva-mame-process.c  gva-mame-process.h  gva-mame.c  gva-mame.h  gva-mute-button.c  gva-mute-button.h  gva-nplayers.c  gva-nplayers.h  gva-play-back.c  gva-play-back.h  gva-preferences.c  gva-preferences.h  gva-process.c  gva-process.h  gva-properties.c  (+14 more)
